# rust-axum-diesel-api

./: Cargo.toml  README.md
migrations/2023-12-12-064402_create_users/: up.sql
src/: main.rs
src/config/: app_config.rs  app_state.rs  mod.rs
src/custom_error/: service_error.rs
src/dto/: mod.rs  user_request_dto.rs  user_response_dto.rs
src/handler/: user_handler.rs
src/mapper/: user_mapper.rs
src/model/: user.rs
src/repository/: mod.rs  pg_user_repo.rs  user_repo.rs
src/schemas/: schema.rs
src/service/: user_service.rs
