[package]
name = "keyboard-gb-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
envconfig = "0.10.0"
r2d2 = "0.8.10"
redis = "0.24.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
validator = { version = "0.16.1", features = ["derive"] }
